--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,84 @@
+altgraph==0.10.2
+bdist-mpkg==0.5.0
+bonjour-py==0.3
 click==6.6
+coverage==4.1
+coveralls==1.1
+docopt==0.6.2
 Flask==0.11.1
+Flask-Cache==0.13.1
+Flask-GoogleMaps==0.2.0
+Flask-SQLAlchemy==2.2
+funcsigs==0.4
+future==0.15.2
+futures==3.0.5
+geographiclib==1.46.3
+geopy==1.11.0
+gpsoauth==0.3.0
 itsdangerous==0.24
 Jinja2==2.8
+livestreamer==1.12.2
+macholib==1.5.1
 MarkupSafe==0.23
+matplotlib==1.4.3
+mock==1.3.0
+modulegraph==0.10.4
+nose==1.3.7
+numpy==1.9.2
+pbr==1.3.0
+peewee==2.8.1
+protobuf==3.0.0
+py2app==0.7.3
+pycrypto==2.6.1
+pycryptodomex==3.4.2
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==0.13.1
+pyparsing==2.0.3
+python-dateutil==2.4.2
+pytz==2015.4
+redis==2.10.5
+requests==2.10.0
+s2sphere==0.2.4
+scipy==0.16.0
+singledispatch==3.4.0.3
+six==1.10.0
+SQLAlchemy==1.1.6
+vboxapi==1.0
 Werkzeug==0.11.11
-Flask-Heroku-Cacheify>=1.3
-pylibmc>=1.2.3
+xattr==0.6.4
+xxhash==0.6.1
+zope.interface==4.1.1
